Fix new window focus

Based on metacity commit: cd481d37ec2551e98db758ff640d02f3745259db
From: Alberts Muktupāvels <alberts.muktupavels@gmail.com>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=534752